# oop_lab2

misc/gtest_Cmake_27_02_vscode/: CMakeLists.txt
misc/gtest_Cmake_27_02_vscode/src/: math_functions.cpp  math_functions.h
misc/gtest_Cmake_27_02_vscode/tests/: math_functions_test.cpp
oop_lab2_prog/: CMakeLists.txt
oop_lab2_prog/src/: lab2.cpp  lab2.h
oop_lab2_prog/tests/: tests.cpp
zvit/: Kabachok_2_oop.docx  ~$bachok_2_oop.docx
